# libcompizconfig

./: CMakeLists.txt  INSTALL  Makefile.am  NEWS  README.md  TODO  autogen.sh  bsettings.pc.in  config.h.in  configure.ac  libccs.pc.in  libcompizconfig.pc.in
backend/: CMakeLists.txt  Makefile.am  ini.c  option.c  option.h
backend/src/: ini.c
cmake/: CMakeLists.txt  FindCompizConfig.cmake  LibCompizConfigCommon.cmake
config/: CMakeLists.txt  config
include/: CMakeLists.txt  Makefile.am  bsettings.h  ccs-backend.h  ccs.h
metadata/: Makefile.am  global.xml
plugin/: CMakeLists.txt  Makefile.am  bset.c  ccp.c  ccp.cpp  ccp.h
plugin/ccp/: CMakeLists.txt  ccp.xml.in
plugin/ccp/src/: ccp.cpp~  ccp.h
po/: POTFILES.skip
src/: CMakeLists.txt  Makefile.am  bindings.c  bsettings-private.h  ccs-private.h  compiz.c  compiz.cpp  compizconfig.proto  config.c  filewatch.c  ini.c  iniparser.c  iniparser.h  lists.c  main.c  match.c  option.c
